--- a/themes/clean-blog/layout/archive.ejs
+++ b/themes/clean-blog/layout/archive.ejs
@@ -26,7 +26,7 @@
 <div class="container">
     <div class="row">
         <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <% page.posts.each(function(item){ %>
+            <% site.posts.each(function(item){ %>
                 <%- partial('_partial/article-archive', {item: item}) %>
             <% }); %>
             <div class="archive-before-pagination"></div>
