Fixing table styles

--- a/themes/clean-blog/layout/_partial/after-footer.ejs
+++ b/themes/clean-blog/layout/_partial/after-footer.ejs
@@ -1,13 +1,15 @@
 
-<!-- jQuery -->
+<!-- jQuery 
 <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
+-->
 
-<!-- Bootstrap -->
+<!-- Bootstrap 
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
+-->
 
-<!-- Gallery -->
+<!-- Gallery 
 <script src="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
-
+-->
 <!-- Disqus Comments -->
 <% if (theme.comments && theme.comments.disqus_shortname){ %>
 <script type="text/javascript">
@@ -24,4 +26,6 @@
 <% } %>
 
 
-<script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us17.list-manage.com","uuid":"22ea3f46039dc271dac8ab52a","lid":"1faf9a3b0a"}) })</script>
+<!-- 
+    <script type="text/javascript" src="//downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us17.list-manage.com","uuid":"22ea3f46039dc271dac8ab52a","lid":"1faf9a3b0a"}) })</script>
+-->
