--- a/themes/clean-blog/layout/_partial/menu.ejs
+++ b/themes/clean-blog/layout/_partial/menu.ejs
@@ -9,7 +9,9 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="<%- config.root %>"><%- theme.menu_title || config.title || "" %></a>
+            <a class="navbar-brand" style="max-width: 90px;" href="<%- config.root %>">
+                <img width="100%" style="cursor: pointer;" src="/img/logo.svg" alt="Oddscript.com logotype">
+            </a>
         </div>
 
         <!-- Collect the nav links, forms, and other content for toggling -->
