--- a/themes/clean-blog/source/css/base.styl
+++ b/themes/clean-blog/source/css/base.styl
@@ -63,10 +63,10 @@ hr.small
       
       li
         a
-          color white
+          color #3F3F3F
           padding 10px
           &:hover, &:focus
-            color white-faded
+            color #000
         &:last-child
           margin-right: 10px;
           a
@@ -140,14 +140,14 @@ tbody
     background: transparent
 
 .intro-header
-  background-color gray
+  background-color #FFFBC7
   background-position center center
   background-attachment scroll
   @extend .background-cover
   margin-bottom 50px
   .site-heading, .post-heading, .page-heading
     padding 100px 0 50px
-    color white
+    color #3F3F3F
     @media only screen and (min-width: 768px)
       padding 150px 0
     &.archives
@@ -185,7 +185,7 @@ tbody
       font-weight 300
       font-size 20px
       a
-        color white
+        color #a8a291
     @media only screen and (min-width: 768px)
       h1
         font-size 55px
@@ -243,7 +243,7 @@ tbody
 
 .post-tags, .post-categories
   font-size 15px
-  margin-top 30px
+  margin-top 15px
   margin-bottom 30px
   a
     border-bottom 1px dotted #ABABAB
