--- a/themes/clean-blog/layout/_partial/after-footer.ejs
+++ b/themes/clean-blog/layout/_partial/after-footer.ejs
@@ -1,11 +1,11 @@
 
-<!-- jQuery 
+<!-- jQuery -->
 <script src="//code.jquery.com/jquery-2.1.4.min.js"></script>
--->
 
-<!-- Bootstrap 
+
+<!-- Bootstrap -->
 <script src="//maxcdn.bootstrapcdn.com/bootstrap/3.3.6/js/bootstrap.min.js"></script>
--->
+
 
 <!-- Gallery 
 <script src="//cdnjs.cloudflare.com/ajax/libs/featherlight/1.3.5/featherlight.min.js" type="text/javascript" charset="utf-8"></script>
