--- a/themes/clean-blog/layout/_partial/article-full.ejs
+++ b/themes/clean-blog/layout/_partial/article-full.ejs
@@ -19,9 +19,24 @@
                         <% if(item.author) { %>
                             Posted by <%- item.author %> on
                         <% } %>
-                        <% if(item.date) { %>
-                            <%= item.date.format(config.date_format) %>
-                        <% } %>
+                        <div style="display: flex;">
+                                <% if (item.categories && item.categories.length || item.tags && item.tags.length) { %>
+                                    <div class="post-tags">
+                                        <% if (item.tags && item.tags.length){ %>
+                                            <%- partial('article-tags', {item: item}) %>
+                                        <% } else { %>
+                                            <%- partial('article-categories', {item: item}) %>
+                                        <% } %>
+                                    </div>
+                                    <div class="post-categories">
+                                        <% if (item.tags && item.tags.length && item.categories && item.categories.length){ %>
+                                            <%- partial('article-categories', {item: item}) %>
+                                        <% } %>
+                                    </div>
+                                <% } %>
+                        </div>
+                                    <!-- Tags and categories -->
+
                     </span>
                 </div>
             </div>
@@ -34,21 +49,7 @@
     <div class="container">
         <div class="row">
 
-            <!-- Tags and categories -->
-           <% if (item.categories && item.categories.length || item.tags && item.tags.length) { %>
-                <div class="col-lg-4 col-lg-offset-2 col-md-5 col-md-offset-1 post-tags">
-                    <% if (item.tags && item.tags.length){ %>
-                        <%- partial('article-tags', {item: item}) %>
-                    <% } else { %>
-                        <%- partial('article-categories', {item: item}) %>
-                    <% } %>
-                </div>
-                <div class="col-lg-4 col-md-5 post-categories">
-                    <% if (item.tags && item.tags.length && item.categories && item.categories.length){ %>
-                        <%- partial('article-categories', {item: item}) %>
-                    <% } %>
-                </div>
-            <% } %>
+
 
             <!-- Gallery -->
             <% if (item.photos && item.photos.length){ %>
