--- a/themes/clean-blog/layout/index.ejs
+++ b/themes/clean-blog/layout/index.ejs
@@ -16,30 +16,38 @@
 
 <!-- Main Content -->
 <div class="container">
-    <div class="row">
-        <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
-            <h2>Newest Article</h2>
-            <% page.posts.each(function(item, i){ %>
-            <% if(i < 1) { %>
-            <a href="<%- item.permalink %>">               
-                <h3><%- item.title %></h3>
-                <p><%- item.description %></p>
-            </a>
-            <% } %>
-            <% }); %>
-            
+        
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <h2>Newest Article</h2>
+                    <% page.posts.each(function(item, i){ %>
+                    <% if(i < 1) { %>
+                    <a href="<%- url_for(item.path) %>">
+                        <div class="jumbotron jumbotron-fluid">
+                            <h3><%- item.title %></h3>
+                            <p style="padding: 0px; margin: 0;"><%- item.description %></p>
+                        </div>               
+                    </a>
+                    <% } %>
+                    <% }); %>
+                </div>
+            </div>
 
-            <h2>Topics</h2>
-            <% site.categories.each(function(item){ %>
-                <a href="categories/<%- item.slug %>">
-                    <div class="jumbotron jumbotron-fluid">
-                        <div class="container">
-                            <h3 class="display-3"><%- item.name %></h3>                      
-                        </div>
-                    </div>
-                </a>  
-            <% }); %>
-        </div>
-    </div>
+            
+            <div class="row">
+                <div class="col-lg-8 col-lg-offset-2 col-md-10 col-md-offset-1">
+                    <h2 id="categories">Categories</h2>
+                    <% site.categories.each(function(item){ %>
+                        <a href="categories/<%- item.slug %>">
+                            <div class="jumbotron jumbotron-fluid">
+                                <div class="container">
+                                    <h3 class="display-3"><%- item.name %></h3>                      
+                                </div>
+                            </div>
+                        </a>  
+                    <% }); %>
+                </div>
+            </div>
+
 </div>
 
